--- a/src/static/index.html
+++ b/src/static/index.html
@@ -32,6 +32,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#student-view">Teacher</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#paloma-view">Paloma</a>
+        </li>
       </ul>
     </div>
   </nav>
@@ -349,6 +352,7 @@
   </div>
 
 
+
   <div id="teacher-view" class="container mt-5" style="display: none;">
     <div class="row">
       <div class="col-md-6">
@@ -463,6 +467,132 @@
               </div>
 
               <button type="submit" class="btn btn-primary">Edit Teacher</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  </div>
+  
+
+  <div id="paloma-view" class="container mt-5" style="display: none;">
+    <div class="row">
+      <div class="col-md-6">
+        <div style="display: flex;">
+          <h1>Paloma List</h1>
+          <button type="button" class="btn btn-outline-primary" id="addPaloma-btn">+</button>
+        </div>
+
+        <div class="card" style="max-height: 300px; overflow-y: auto;">
+          <ul class="list-group list-group-flush" id="paloma-list">
+
+          </ul>
+        </div>
+      </div>
+
+
+    
+      <!-- Add Paloma Form -->
+      <div class="col-md-6" id="addPaloma-form">
+        <div class="row justify-content-center">
+          <div class="col-lg-8 form-container">
+            <h2 id="addPaloma-title" class="mt-3">Add New Paloma</h2>
+            <form id="paloma-form">
+              <div class="row">
+                <div class="form-group">
+                  <label for="name">Name:</label>
+                  <input type="text" class="form-control" id="name-paloma" required>
+                </div>
+              </div>
+              <div class="row">
+                <div class="form-group">
+                  <label for="age">Age:</label>
+                  <input type="number" class="form-control" id="age-paloma" required>
+                </div>
+              </div>
+              <div class="row">
+                <div class="form-group">
+                  <label for="subject">Subject:</label>
+                  <input type="text" class="form-control" id="subject-paloma" required>
+                </div>
+              </div>
+              <div class="row">
+                <!-- Grupo1 -->
+                <div class="form-group">
+                  <label for="paloma-cbox-g1">Grupo 1</label>
+                  <input type="checkbox" id="paloma-cbox-g1">
+                </div>
+
+                <!-- Grupo2 -->
+                <div class="form-group">
+                  <label for="paloma-cbox-g2">Grupo 2</label>
+                  <input type="checkbox" id="paloma-cbox-g2">
+                </div>
+
+                <!-- Grupo3 -->
+                <div class="form-group">
+                  <label for="paloma-cbox-g3">Grupo 3</label>
+                  <input type="checkbox" id="paloma-cbox-g3">
+                </div>
+
+              </div>
+
+              <button type="submit" class="btn btn-primary">Add Paloma</button>
+            </form>
+          </div>
+        </div>
+      </div>
+
+
+
+      <!-- Edit Paloma Form -->
+      <div id="editPaloma-form" class="col-md-6" id="addPaloma-form" style="display: none;">
+        <div class="row justify-content-center">
+          <div class="col-lg-8 form-container">
+            <h2 id="editPaloma-title" class="mt-3">Edit New Paloma</h2>
+            <form id="paloma-form-edit">
+              <div class="row">
+                <div class="form-group">
+                  <label for="name">Name:</label>
+                  <input type="text" class="form-control" id="name-paloma-edit" required>
+                </div>
+              </div>
+              <div class="row">
+                <div class="form-group">
+                  <label for="age">Age:</label>
+                  <input type="number" class="form-control" id="age-paloma-edit" required>
+                </div>
+              </div>
+              <div class="row">
+                <div class="form-group">
+                  <label for="subject">Subject:</label>
+                  <input type="text" class="form-control" id="subject-paloma-edit" required>
+                </div>
+              </div>
+              <div class="row">
+                <!-- Grupo1 -->
+                <div class="form-group">
+                  <label for="paloma-cbox-g1">Grupo 1</label>
+                  <input type="checkbox" id="paloma-cbox-g1-edit">
+                </div>
+
+                <!-- Grupo2 -->
+                <div class="form-group">
+                  <label for="paloma-cbox-g2">Grupo 2</label>
+                  <input type="checkbox" id="paloma-cbox-g2-edit">
+                </div>
+
+                <!-- Grupo3 -->
+                <div class="form-group">
+                  <label for="paloma-cbox-g3">Grupo 3</label>
+                  <input type="checkbox" id="paloma-cbox-g3-edit">
+                </div>
+
+              </div>
+
+              <button type="submit" class="btn btn-primary">Edit Paloma</button>
             </form>
           </div>
         </div>
